[gd_scene load_steps=16 format=2]

[ext_resource path="res://ObstacleCourse_Part2/assets/shadow_circle.png" type="Texture" id=1]
[ext_resource path="res://ObstacleCourse_Part2/assets/godot.png" type="Texture" id=2]
[ext_resource path="res://ObstacleCourse_Part2/Godot.gd" type="Script" id=3]
[ext_resource path="res://ObstacleCourse_Part2/assets/smoke.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ghost"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.431373 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 28.2843

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.207865, 0.494382, 0.988764 )
colors = PoolColorArray( 0.804688, 0.776152, 0.776152, 0, 0.694118, 0.686275, 0.74902, 1, 0.831373, 0.831373, 0.862745, 0.960784, 0.777344, 0.747022, 0.747022, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.352273 ), 0.0, 0.0, 0, 0, Vector2( 0.385475, 0.818182 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.409091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 85.0
damping_random = 0.5
scale = 0.5
scale_random = 0.3
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[node name="Godot" type="KinematicBody2D"]
position = Vector2( 2, -11 )
collision_layer = 2
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.356863 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -61 )
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hover"
anims/RESET = SubResource( 2 )
anims/hover = SubResource( 3 )

[node name="TimerGhost" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayerGhost" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/ghost = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -30 )
shape = SubResource( 6 )

[node name="SmokeParticles" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 20
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 4 )
